--- a/src/pages/Home/dashboard.scss
+++ b/src/pages/Home/dashboard.scss
@@ -24,7 +24,3 @@
     padding: 25px;
   }
 }
-
-@media all and (max-width: $max-width-device) {
-  
-}
